# internvl-cann-vit-poc

./: .gitignore  AGENTS.md  README.md  llm_engine_bbit.cpp  pyproject.toml
artifacts/onnx/: internvl3_5_vit_projector_fp32_opset18_staticpos.onnx.metadata.json
artifacts/release/: artifacts-manifest.sha256.txt
demo/entry/: build-profile.json5
demo/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
demo/entry/src/main/cpp/types/libentry/: Index.d.ts
demo/entry/src/main/cpp/validation/: napi_result.cpp  napi_result.h  nn_runtime_validator.cpp  nn_runtime_validator.h  rawfile_loader.cpp  rawfile_loader.h  tensor_metrics.cpp  tensor_metrics.h  validation_constants.h
docs/: current-status.md  harmonyos-om-runtime-validation.md  index.md  next-steps.md  om-vs-onnx-compare-runbook.md  onnx-omc-debug-output-runbook.md  onnx-quantization-debug-runbook.md  release-artifacts.md  search-guide.md  stage-1-model-split-baseline.md  stage-2-onnx-export.md  stage-3-onnx-to-om.md  stage-4-vit-projector-chain.md  stage-5-int8-quantization-runbook.md  yellow-zone-agent-handoff.md  yellow-zone-onnx-to-om-ddk-runbook.md  yellow-zone-validation-runbook.md
include/common/: lm_engine_audio.h  lm_engine_buf.h  lm_engine_c_api_export.h  lm_engine_image.h  lm_engine_model_info.h
include/llm_engine/: ai_agent_data.h  llm_engine_context.h  (+11 more)
scripts/: check_wsl_omg.ps1  check_wsl_omg.sh  compare_omc_layers.py  convert_onnx_to_om.sh  convert_wsl_onnx_to_om.ps1  copy_wsl_om_to_windows.ps1  dump_onnx_outputs.py  eval_om_against_onnx.py  eval_onnx_pair.py  hdc_omc_doctor.bat  hdc_omc_doctor.sh  hdc_omc_dump_one.bat  hdc_omc_dump_one.sh  hdc_omc_profile_one.bat  hdc_omc_profile_one.sh  hdc_omc_run_one.bat  hdc_omc_run_one.sh  install_cann_platform_plugin_to_wsl.ps1  install_cann_tools_to_wsl.ps1  prepare_wsl_stage3.ps1  publish_github_release_artifacts.ps1  run_hdc_omc_dump.py
success_demo/: ~$说明文档.docx  说明文档.docx
tests/: test_baseline.py  test_cann_omg_npu_partition.py  test_harmonyos_demo_async.py  test_hdc_omc_dump.py  test_model_split.py  test_om_onnx_eval.py  test_omc_dump_align.py  test_onnx_export.py  test_onnx_intermediate_debug.py  test_onnx_pair_eval.py  test_onnx_static_surgery.py  test_onnx_verify.py  test_validation_tensors.py
(+77 files in other folders)
