[project]
name = "internvl-cann-vit-poc"
version = "0.1.0"
description = "PoC utilities for splitting InternVL3.5 ViT and recording a PyTorch baseline."
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.0",
    "einops>=0.8.2",
    "huggingface-hub>=0.30,<1",
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxruntime>=1.24.3",
    "pillow>=10.0",
    "safetensors>=0.4",
    "timm>=1.0.27",
    "torch>=2.3",
    "transformers>=4.51.1,<5",
]

[project.scripts]
internvl-vit-baseline = "internvl_vit_poc.baseline:main"
internvl-export-onnx = "internvl_vit_poc.onnx_export:main"
internvl-onnx-verify = "internvl_vit_poc.onnx_verify:main"
internvl-simplify-onnx-for-cann = "internvl_vit_poc.onnx_static_surgery:main"
internvl-export-validation-tensors = "internvl_vit_poc.validation_tensors:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/internvl_vit_poc"]
